fix last seen overflow

--- a/src/components/inbox/drawer/friends/friend-item/styles.module.scss
+++ b/src/components/inbox/drawer/friends/friend-item/styles.module.scss
@@ -17,6 +17,7 @@
   display: flex;
   flex-shrink: 0;
   margin-right: 4px;
+  margin-left: 4px;
   gap: 3px;
   .button {
     padding: 5px;
